@@ -28,4 +28,6 @@ TODO
 7 - Windows support?
 8 - Improve Ctrl+c support
 8b) Clean up files?
-9 - Allow file paths to be specified for web app scans
+9 - If a tool doesn't like http:// or https://, need to specify what it does like
+    (for example -ssl)
+10 - Check return codes for commands
