@@ -3,6 +3,6 @@ binary_location: /root/git/CMSmap/cmsmap.py
 url: https://github.com/Dionach/CMSmap 
 
 rules:
-   target-parameter-exists: ['target_protocol']
+   target-parameter-exists: ['target_ip','target_protocol']
 
 arguments: "-f D -t {target_protocol}://{target_domain_name} -o {output_dir}/{date}_cmsmap_{target_domain_name} >/dev/null 2>&1"
