@@ -5,6 +5,6 @@ url: http://www.bolet.org/TestSSLServer/
 rules:
    equals:
       'target_protocol': 'https'
-   target-parameter-exists: ['target_port_number']
+   target-parameter-exists: ['target_ip','target_port_number']
 
 arguments: "-jar /root/Downloads/TestSSLServer.jar {target_domain_name} {target_port_number} > {output_dir}/{date}_testsslserver_{target_domain_name} 2>/dev/null"
